bench/gateways/envoy/proxy/envoy.yaml
static_resources:
  listeners:
    - name: plain
      address:
        socket_address: { address: 0.0.0.0, port_value: 8000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config: &hcm
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: bench
                codec_type: AUTO
                route_config:
                  name: bench
                  virtual_hosts:
                    - name: bench
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/bench/" }
                          route: { cluster: upstream }
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    - name: tls
      address:
        socket_address: { address: 0.0.0.0, port_value: 8443 }
      filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                alpn_protocols: ["h2", "http/1.1"]
                tls_params: { tls_minimum_protocol_version: TLSv1_3 }
                tls_certificates:
                  - certificate_chain: { filename: "@@CONFIG_DIR@@/tls/cert.pem" }
                    private_key: { filename: "@@CONFIG_DIR@@/tls/key.pem" }
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config: *hcm
  clusters:
    - name: upstream
      type: STRICT_DNS
      connect_timeout: 1s
      circuit_breakers:
        thresholds:
          - max_connections: 1000000
            max_pending_requests: 1000000
            max_requests: 1000000
            max_retries: 1000000
      load_assignment:
        cluster_name: upstream
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: "@@UPSTREAM_HOST@@", port_value: @@UPSTREAM_PORT@@ }
